# Gainify-Stock-Price-Prediction-Engine

./: .env.example  .gitignore  Conclusion  README.md  pyproject.toml  requirements.txt
configs/: bucket_config.py  market_config.py  model_config.py  paths_config.py  training_config.py
data/sample/: .gitkeep
gainify_version2_Results/: README.md  capacity_estimates.csv  equity_curve.csv  metrics_summary.csv  regime_performance.csv  rolling_drawdown.csv  top_5_trades.csv  tradebook_public.csv  walkforward_splits.csv  worst_5_trades.csv  yearly_performance.csv
legacy/: DatasetComplete.py  yearly.py
notebooks/: .gitkeep
scripts/: _legacy_stage_runner.py  fetch_data.py  predict.py  run_full_pipeline.py  train_daily.py  train_monthly.py  train_weekly.py  train_yearly.py  update_data.py
src/gainify_stock_predictor/: orchestrator_legacy.py
src/gainify_stock_predictor/bucketing/: __init__.py  bucket_assigner.py  sector_mapper.py  volatility_buckets.py
src/gainify_stock_predictor/checkpoints/: __init__.py  checkpoint_manager.py  metadata_manager.py
src/gainify_stock_predictor/data_fetching/: __init__.py  data_fetcher.py  data_integrator.py  historical_fetcher.py  (+4 more)
tests/: test_bucket_assigner.py  test_data_fetching_modular.py  test_features.py  test_imports.py  test_model_files.py  test_models.py  test_modular_scripts.py  test_preprocessing.py  test_scripts.py  test_training_prediction_reporting_files.py
tools/: extract_datasetcomplete.py  extract_features_batch2.py  extract_models.py  extract_training_prediction_reporting.py  fix_losses_file.py
(+41 files in other folders)
